--- a/src/app/components/template-form/template-form.component.scss
+++ b/src/app/components/template-form/template-form.component.scss
@@ -78,10 +78,13 @@ border-radius: 10px;
   height: 50px;
   text-align: center;
   width: 100%;
-}
 
-.btn:active {
-  background-color: #06b;
+  &:hover {
+    background-color: #06b;
+  }
+  &:active {
+    background-color: #08d;
+  }
 }
 
 
